[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GridTester.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/DayNightSystem.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Home.tscn" type="PackedScene" id=3]

[node name="DayNightSystem" type="Node2D"]
script = ExtResource( 2 )

[node name="GridTester" parent="." instance=ExtResource( 1 )]

[node name="Home" parent="." instance=ExtResource( 3 )]

[connection signal="on_timeout" from="GridTester" to="." method="_on_GridTester_on_timeout"]
[connection signal="on_exit" from="Home" to="." method="_on_Home_on_exit"]
